# shap_visualization

./: .gitignore  pyproject.toml
assets/: sample_request.json
notebooks/: decision_tree.ipynb  ranking_model_shap_visualization.ipynb  shap_introduction.ipynb  shap_visualization.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
tests/: test_shap_visualization.py
